# HAL64

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c  main.c~
.github/workflows/: c-cpp.yml
autogen/: lexer.c  lexer.l
examples/: add_numbers.hal  fib.hal  strings.hal
include/: hal64.h
include/assembler/: assembler.h  lexer.h
include/utils/: errors.h  memory.h
libs/unity/: unity.c  unity.h  unity_internals.h
src/: hal64.c  lexer.l  vm.c
src/assembler/: assemble.c
src/utils/: memory.c
test/: assembler.c  lexer.c
